Fixed the text wrap for API URLs.

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -111,6 +111,9 @@
     padding-top: 15px;
 }
 
+.api-url {
+    word-wrap: break-word;
+}
 /*
 select,
 select.form-control {
